<resources>
    <string name="app_name">itreader</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="login_error">Login error</string>
    <string name="error_user">This user does not exist</string>
    <string name="error_password">Invalid password</string>
    <string name="signup_error">Sign up error</string>
    <string name="error_message">An error has occurred</string>
    <string name="empty_field">Empty username or password</string>
    <string name="empty_email">Empty email</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait</string>
    <string name="empty_fields">You do not have fill any field</string>
    <string name="no_data_to_change">No data to change</string>
    <string name="user_mail_already_registered">This user or email is already registered</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="been_registered">has been registered</string>
    <string name="been_deleted">has been deleted</string>
    <string name="name">Name</string>
    <string name="forgotpass"><u>Forgot password</u></string>
    <string name="reset">Reset</string>
    <string name="menu_library">Library</string>
    <string name="menu_MyBooks">MyBooks</string>
    <string name="menu_search">Search</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_admin_control_panel">Admin Control Panel</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="profile_label">User Profile</string>
    <string name="profile_name">Name:</string>
    <string name="profile_username">Username:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_password">Password:</string>
    <string name="profile_password_hint_old">Enter your password</string>
    <string name="profile_password_hint_new">Enter your new password</string>
    <string name="profile_save">Save Changes</string>
    <string name="profile_signout">Sign Out</string>
    <string name="profile_delete">Delete Your Account</string>
    <string name="no_books">You do not have books to show</string>
    <string name="no_docs">You do not have documents to show</string>
    <string name="book_page_rate">Rate it</string>
    <string name="book_page_read">Read it</string>
    <string name="book_page_add">Add to your library</string>
    <string name="book_page_delete">Delete from your library</string>
    <string name="alert_add_to_library">Could not add book from library</string>
    <string name="alert_delete_to_library">Could not delete book from library</string>
    <string name="book_added">Added to library</string>
    <string name="book_deleted">Deleted from library</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_changes">Confirm changes:</string>
    <string name="current_password">Current password</string>
    <string name="rating_made">Rating made</string>
    <string name="no_next_page">There is not next page</string>
    <string name="textsize_small">Small text</string>
    <string name="textsize_medium">Medium text</string>
    <string name="textsize_large">Large text</string>
    <string name="textsize_very_large">Very large text</string>
    <string name="textcolor_blackonwhite">Black on white</string>
    <string name="textcolor_whiteonblack">White on black</string>
    <string name="textcolor_warm">Warm colors</string>
    <string name="textsearch_label_word">Search word in page</string>
    <string name="textsearch_label_page">Search page in book</string>
    <string name="textstyle_alignStart">Align to start</string>
    <string name="textstyle_alignCenter">Align to center</string>
    <string name="password_error">Password Error</string>
    <string name="reset_password_error">Reset Password Error</string>
    <string name="email_error">Email Error</string>
    <string name="email_not_registered">This email is not registered</string>
    <string name="incorrect_email_format">This email format is incorrect</string>
    <string name="password_format">Password correct format: 8 characters with at least 1 uppercase and lowercase and 1 number</string>
    <string name="password_sent">Password has been sent to</string>
    <string name="changes_saved">Changes saved</string>
    <string name="no_occurrences">No occurrences</string>
    <string name="delete_from_catalog">Book deleted from catalog</string>
    <string name="results">Results</string>
    <string name="no_results">There are no results</string>
    <string name="create_bm">Create new bookmark</string>
    <string name="list_all_bm">List all bookmarks</string>
    <string name="bookmark_list_label">Your bookmarks</string>
    <string name="deleted_doc">Document deleted</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_author">Search by author</string>
    <string name="search_by_editorial">Search by editorial</string>
    <string name="charge">Charge more</string>
    <string name="search_word">Search word</string>
    <string name="search_page">Search page</string>
    <string name="bookmark_create">Name your bookmark</string>
    <string name="bookmark_created">Bookmark created</string>
    <string name="bookmark_no_created">Bookmark not created: Bookmark limit reached</string>
    <string name="error_bookmark_name">There is already a bookmark with this name</string>
    <string name="error_bookmark_page">There is already a bookmark in this page</string>
    <string name="page">Page</string>
    <string name="end_of_book">End of book has been reached</string>
    <string name="shared_label">Insert email to share</string>
    <string name="empty_library">You still don\'t have books in your library, You can add as books from our catalog as you wish</string>
</resources>