<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <ImageView
        android:id="@+id/buttonSmall"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_radio_button_checked_24"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:tint="@color/BLUEBACK" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="194dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/textsize_small"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonMedium"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_radio_button_unchecked_24"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSmall"
        tools:tint="@color/BLUEBACK" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/textsize_medium"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/buttonLarge"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_radio_button_unchecked_24"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedium"
        tools:tint="@color/BLUEBACK" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="201dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:text="@string/textsize_large"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>