<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/degradado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/book_page_title"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Titulo del libro"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/book_page_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="80dp"
        android:text="Titulo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/autor"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="120dp"
        android:text="autor"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewBook"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        android:lines="1"
        android:ellipsize="end"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="150dp"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/editorial"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:text="editorial"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageViewBook"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/rate_option"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:text="@string/book_page_rate"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lines="1"
        android:ellipsize="end"/>

    <Button
        android:id="@+id/buttonRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/BLUEBACK"
        android:text="@string/book_page_read"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonDeleteLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/book_page_delete"
        android:textColor="@color/white" />


</FrameLayout>